[gd_scene load_steps=22 format=3 uid="uid://cc3tb05ie70il"]

[ext_resource type="Script" path="res://ui/main_scene.gd" id="1_8vqs3"]
[ext_resource type="Shader" path="res://shaders/grid.gdshader" id="2_7ckc8"]
[ext_resource type="Script" path="res://ui/camera_2d.gd" id="2_pmywl"]
[ext_resource type="Texture2D" uid="uid://xbhxywpvacu6" path="res://icon.svg" id="3_ade1w"]
[ext_resource type="Script" path="res://ui/ic_elements_tree/ics_tree.gd" id="3_q10ex"]
[ext_resource type="Script" path="res://ui/save_file_dialog.gd" id="4_5cvoo"]
[ext_resource type="Script" path="res://ui/hide_tree_button.gd" id="5_546py"]
[ext_resource type="Script" path="res://ui/load_file_dialog.gd" id="5_656tm"]
[ext_resource type="Script" path="res://ui/clear_button.gd" id="5_pxoya"]
[ext_resource type="Script" path="res://ui/do_cycles_button.gd" id="5_qlik5"]
[ext_resource type="Script" path="res://ui/show_logic_analyzer_button.gd" id="7_nqego"]
[ext_resource type="Script" path="res://ui/help_dialog.gd" id="8_s7pmm"]
[ext_resource type="Script" path="res://ui/logic_analyzer/logic_analyzer_window.gd" id="12_ngdkd"]
[ext_resource type="Script" path="res://ui/logic_analyzer/select_pins_button.gd" id="13_o3lk5"]
[ext_resource type="Script" path="res://ui/logic_analyzer/timer_delay_line_edit.gd" id="13_oocfk"]
[ext_resource type="Script" path="res://ui/logic_analyzer/logic_analyzer_timer.gd" id="14_st4q1"]
[ext_resource type="Script" path="res://ui/logic_analyzer/signals_h_split_container.gd" id="15_7mwtm"]
[ext_resource type="Script" path="res://ui/logic_analyzer/clear_button.gd" id="15_73c41"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7n0h1"]
shader = ExtResource("2_7ckc8")
shader_parameter/position = null
shader_parameter/scale = Vector2(1, 1)
shader_parameter/background_color = Vector4(0.4, 0.6, 0.9, 1)
shader_parameter/grid_color = Vector4(0.2, 0.2, 0.2, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1mdxg"]
shader = ExtResource("2_7ckc8")
shader_parameter/position = null
shader_parameter/scale = Vector2(1, 1)
shader_parameter/background_color = Vector4(0.4, 0.6, 0.9, 1)
shader_parameter/grid_color = Vector4(0.2, 0.2, 0.2, 1)

[node name="RootNode" type="Node2D"]
script = ExtResource("1_8vqs3")

[node name="GridLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Grid" type="Sprite2D" parent="GridLayer"]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_7n0h1")
position = Vector2(576, 324)
scale = Vector2(9, 5.0625)
texture = ExtResource("3_ade1w")

[node name="GridRect" type="TextureRect" parent="GridLayer"]
visible = false
material = SubResource("ShaderMaterial_1mdxg")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ade1w")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 320)
script = ExtResource("2_pmywl")

[node name="UiCanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonsContainer" type="HBoxContainer" parent="UiCanvasLayer"]
offset_right = 679.0
offset_bottom = 31.0
mouse_filter = 0

[node name="CheckButton" type="CheckButton" parent="UiCanvasLayer/ButtonsContainer"]
layout_mode = 2
text = "Скрыть дерево"
script = ExtResource("5_546py")

[node name="ClearButton" type="Button" parent="UiCanvasLayer/ButtonsContainer"]
layout_mode = 2
text = "Очистить"
script = ExtResource("5_pxoya")

[node name="SaveAsButton" type="Button" parent="UiCanvasLayer/ButtonsContainer"]
layout_mode = 2
text = "Сохранить"
metadata/_edit_use_anchors_ = true

[node name="LoadButton" type="Button" parent="UiCanvasLayer/ButtonsContainer"]
layout_mode = 2
text = "Загрузить"
metadata/_edit_use_anchors_ = true

[node name="HelpButton" type="Button" parent="UiCanvasLayer/ButtonsContainer"]
layout_mode = 2
text = "Помогите"

[node name="ShowLogicAnalyzerButton" type="Button" parent="UiCanvasLayer/ButtonsContainer"]
layout_mode = 2
text = "Открыть логический анализатор"
script = ExtResource("7_nqego")

[node name="DoCyclesButton" type="CheckButton" parent="UiCanvasLayer/ButtonsContainer"]
layout_mode = 2
text = "Альтернативный алгоритм"
script = ExtResource("5_qlik5")

[node name="FunctionalUIContainer" type="VBoxContainer" parent="UiCanvasLayer"]
anchors_preset = -1
anchor_right = 0.242
anchor_bottom = 1.0
offset_top = 40.0
offset_right = 0.191986
grow_vertical = 2
mouse_filter = 0
metadata/_edit_use_anchors_ = true

[node name="ComponentTree" type="Tree" parent="UiCanvasLayer/FunctionalUIContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Tooltip"
hide_root = true
script = ExtResource("3_q10ex")

[node name="SaveAsFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
initial_position = 4
size = Vector2i(500, 400)
access = 2
show_hidden_files = true
use_native_dialog = true
script = ExtResource("4_5cvoo")

[node name="LoadFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 4
size = Vector2i(500, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
show_hidden_files = true
use_native_dialog = true
script = ExtResource("5_656tm")

[node name="HelpDialog" type="AcceptDialog" parent="."]
auto_translate_mode = 1
title = "Управление"
initial_position = 1
size = Vector2i(760, 262)
dialog_text = "Масштаб - колесико мыши или клавиши +/-
Перемещение рабочей области - wasd или перетаскивание с зажатой СКМ
Выбор элемента в дереве слева
При выбранном элементе Alt + ЛКМ размещает элемент под курсором
При наведении на элемент перетаскивание мыши с зажатой ЛКМ перемещает элемент
ПКМ при наведении на кнопку переключателя меняет его состояние
Создание провода: ПКМ сначала по одной ножке, затем по второй
Удаление элемента/провода: навести указатель мыши на элемент/провод и нажать Delete или СКМ
Включение или отключение сетки: G
Переключение графических режимов: \\"
script = ExtResource("8_s7pmm")

[node name="LogicAnalyzerWindow" type="Window" parent="."]
mode = 1
title = "Логический Анализатор"
initial_position = 4
size = Vector2i(900, 600)
visible = false
script = ExtResource("12_ngdkd")

[node name="RootVBoxContainer" type="VBoxContainer" parent="LogicAnalyzerWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonHBoxContainer" type="HBoxContainer" parent="LogicAnalyzerWindow/RootVBoxContainer"]
layout_mode = 2

[node name="SelectPinsButton" type="Button" parent="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Начать выбор ножек"
script = ExtResource("13_o3lk5")

[node name="StartStopAnalysisButton" type="Button" parent="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Начать"

[node name="ClearButton" type="Button" parent="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer"]
layout_mode = 2
text = "Очистить"
script = ExtResource("15_73c41")

[node name="TimerDelayLabel" type="Label" parent="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer"]
layout_mode = 2
text = "Задержка снятия значений"

[node name="TimerDelayLineEdit" type="LineEdit" parent="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer"]
layout_mode = 2
script = ExtResource("13_oocfk")

[node name="SignalsHSplitContainer" type="HSplitContainer" parent="LogicAnalyzerWindow/RootVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 175
script = ExtResource("15_7mwtm")

[node name="SignalLabelsPanelContainer" type="PanelContainer" parent="LogicAnalyzerWindow/RootVBoxContainer/SignalsHSplitContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="SignalLabelsVBoxContainer" type="VBoxContainer" parent="LogicAnalyzerWindow/RootVBoxContainer/SignalsHSplitContainer/SignalLabelsPanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_gbwwf")

[node name="SignalsPanelContainer" type="PanelContainer" parent="LogicAnalyzerWindow/RootVBoxContainer/SignalsHSplitContainer"]
layout_mode = 2

[node name="SignalsScrollContainer" type="ScrollContainer" parent="LogicAnalyzerWindow/RootVBoxContainer/SignalsHSplitContainer/SignalsPanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SignalsVBoxContainer" type="VBoxContainer" parent="LogicAnalyzerWindow/RootVBoxContainer/SignalsHSplitContainer/SignalsPanelContainer/SignalsScrollContainer"]
layout_mode = 2

[node name="LogicAnalyzerTimer" type="Timer" parent="LogicAnalyzerWindow"]
script = ExtResource("14_st4q1")

[connection signal="pressed" from="UiCanvasLayer/ButtonsContainer/ClearButton" to="UiCanvasLayer/ButtonsContainer/ClearButton" method="_on_pressed"]
[connection signal="pressed" from="UiCanvasLayer/ButtonsContainer/SaveAsButton" to="SaveAsFileDialog" method="_on_save_as_button_pressed"]
[connection signal="pressed" from="UiCanvasLayer/ButtonsContainer/LoadButton" to="LoadFileDialog" method="_on_load_button_pressed"]
[connection signal="pressed" from="UiCanvasLayer/ButtonsContainer/HelpButton" to="HelpDialog" method="_on_help_button_pressed"]
[connection signal="pressed" from="UiCanvasLayer/ButtonsContainer/ShowLogicAnalyzerButton" to="UiCanvasLayer/ButtonsContainer/ShowLogicAnalyzerButton" method="_on_pressed"]
[connection signal="toggled" from="UiCanvasLayer/ButtonsContainer/DoCyclesButton" to="UiCanvasLayer/ButtonsContainer/DoCyclesButton" method="_on_toggled"]
[connection signal="item_mouse_selected" from="UiCanvasLayer/FunctionalUIContainer/ComponentTree" to="UiCanvasLayer/FunctionalUIContainer/ComponentTree" method="_on_item_mouse_selected"]
[connection signal="nothing_selected" from="UiCanvasLayer/FunctionalUIContainer/ComponentTree" to="UiCanvasLayer/FunctionalUIContainer/ComponentTree" method="_on_nothing_selected"]
[connection signal="file_selected" from="SaveAsFileDialog" to="SaveAsFileDialog" method="_on_file_selected"]
[connection signal="file_selected" from="LoadFileDialog" to="LoadFileDialog" method="_on_file_selected"]
[connection signal="close_requested" from="LogicAnalyzerWindow" to="LogicAnalyzerWindow" method="_on_close_requested"]
[connection signal="pressed" from="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/SelectPinsButton" to="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/SelectPinsButton" method="_on_pressed"]
[connection signal="pressed" from="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/StartStopAnalysisButton" to="LogicAnalyzerWindow/LogicAnalyzerTimer" method="_on_button_2_pressed"]
[connection signal="pressed" from="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/ClearButton" to="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/ClearButton" method="_on_pressed"]
[connection signal="delay_value_changed" from="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/TimerDelayLineEdit" to="LogicAnalyzerWindow/RootVBoxContainer/SignalsHSplitContainer" method="_on_timer_delay_line_edit_delay_value_changed"]
[connection signal="delay_value_changed" from="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/TimerDelayLineEdit" to="LogicAnalyzerWindow/LogicAnalyzerTimer" method="_on_timer_delay_line_edit_delay_value_changed"]
[connection signal="focus_entered" from="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/TimerDelayLineEdit" to="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/TimerDelayLineEdit" method="_on_focus_entered"]
[connection signal="focus_exited" from="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/TimerDelayLineEdit" to="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/TimerDelayLineEdit" method="_on_focus_exited"]
[connection signal="text_change_rejected" from="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/TimerDelayLineEdit" to="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/TimerDelayLineEdit" method="_on_text_change_rejected"]
[connection signal="text_submitted" from="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/TimerDelayLineEdit" to="LogicAnalyzerWindow/RootVBoxContainer/ButtonHBoxContainer/TimerDelayLineEdit" method="_on_text_submitted"]
[connection signal="timeout" from="LogicAnalyzerWindow/LogicAnalyzerTimer" to="LogicAnalyzerWindow/RootVBoxContainer/SignalsHSplitContainer" method="_on_logic_analyzer_timer_timeout"]
